[package]
name = "roc_editor"
version = "0.1.0"
authors = ["Richard Feldman <oss@rtfeldman.com>"]
edition = "2018"
description = "An editor for Roc"
license = "Apache-2.0"
exclude = ["src/shaders/*.spv"]

[dependencies]
roc_collections = { path = "../compiler/collections" }
roc_can = { path = "../compiler/can" }
roc_parse = { path = "../compiler/parse" }
roc_region = { path = "../compiler/region" }
roc_module = { path = "../compiler/module" }
roc_problem = { path = "../compiler/problem" }
roc_types = { path = "../compiler/types" }
roc_fmt = { path = "../compiler/fmt" }
roc_reporting = { path = "../compiler/reporting" }
# TODO switch to clap 3.0.0 once it's out. Tried adding clap = "~3.0.0-beta.1" and cargo wouldn't accept it
ven_graph = { path = "../vendor/pathfinding" }
im = "14" # im and im-rc should always have the same version!
im-rc = "14" # im and im-rc should always have the same version!
bumpalo = { version = "3.2", features = ["collections"] }
inlinable_string = "0.1"
arraystring = "0.3.0"
libc = "0.2"
page_size = "0.4"
winit = "0.22"
wgpu = "0.6"
glyph_brush = "0.7"
log = "0.4"
zerocopy = "0.3"
env_logger = "0.7"
futures = "0.3"
wgpu_glyph = "0.10"
cgmath = "0.17.0"
snafu = { version = "0.6", features = ["backtraces"] }
colored = "2"
pest = "2.1"
pest_derive = "2.1"
ropey = "1.2.0"
copypasta = "0.7.1"
indoc = "0.3.3"
palette = "0.5"
confy = { git = 'https://github.com/rust-cli/confy', features = [
  "yaml_conf"
], default-features = false }
serde = { version = "1.0.123", features = ["derive"] }

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]

[dev-dependencies]
pretty_assertions = "0.5.1"
maplit = "1.0.1"
quickcheck = "0.8"
quickcheck_macros = "0.8"
criterion = "0.3"
rand = "0.8.2"

[[bench]]
name = "file_benchmark"
harness = false

[[bench]]
name = "edit_benchmark"
harness = false
# uncomment everything below if you have made changes to any shaders and
# want to compile them to .spv
# [build-dependencies]
# rayon = "1.5.0"
# anyhow = "1.0"
# fs_extra = "1.1"
# glob = "0.3"
# shaderc = "0.6"
